<resources>
    <string name="app_name">ClipNote</string>

    <string name="detail_done">Done</string>
    <string name="detail_mode">Mode</string>
    <string name="detail_delete">Delete</string>

    <string name="cancle">cancle</string>
    <string name="confirm">confirm</string>
    <string name="note_change_cancel">cancel the change</string>
    <string name="note_not_save">do not save the note</string>
    <string name="note_saved">Note saved</string>
    <string name="note_changed">Note changed</string>
    <string name="note_store_failed">Store failed</string>
    <string name="note_delete_failed">Delete failed</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_content">ClipNote</string>

    <string name="find_note">Find a note from your clipboard\nWould you wanna to create a note?</string>

    <!--setting activity-->
    <string name="host_notice">Input your requset path at below input area</string>
    <string name="host_hint">http://IP[:port]</string>
    <string name="host_input">http://</string>
    <string name="submit">Submit</string>
    <string name="test">Test</string>
    <string name="test_failure">host has no response,check your input</string>
</resources>
